# github-action-pages-cicd-example

./: .gitignore  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs-publish.yml  docs.yml
docs/source/: conf.py  index.rst
